--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<canvas id="myCanvas" width="600" height="400"></canvas>
 		<br>
 		<!--- Create Bootstrap button --->
-		<button class="btn btn-warning btn-lg" onclick="Play()">Dear Mom</button>
+		<button class="btn btn-warning btn-lg" onclick="playsound()">Dear Mom</button>
 	</center>
 	<audio id="myAudio" src="bdayaudio.mp3"></audio>
 	<script src="main.js"></script>
